--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-contacts": "^7.0.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-responsive-screen": "^1.4.2",
