--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-firebase/firestore": "^18.3.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "firebase": "^9.0.0",
+    "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-contacts": "^7.0.6",
