--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,5 +17,15 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
+// plugins {
+//   // ...
+
+//   // Add the dependency for the Google services Gradle plugin
+//   id 'com.google.gms.google-services' version '4.3.15' apply false
+
+// }
+
+//apply plugin: 'com.google.gms.google-services'
