--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native": "0.72.3",
     "react-native-contacts": "^7.0.6",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0"
+    "react-native-screens": "^3.23.0",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
