--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "firebase": "^10.1.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-contacts": "^7.0.6",
