--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-contacts": "^7.0.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "^5.6.0",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-sms": "^1.11.0",
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
