--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,6 +110,8 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation "com.google.firebase:firebase-auth"
+    // implementation project(':react-native-html-to-pdf')
+    // compile project(':react-native-html-to-pdf')
 implementation platform('com.google.firebase:firebase-bom:32.2.2')
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
