--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-contacts": "^7.0.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^5.6.0",
-    "react-native-pdf-lib": "^1.0.0",
+    "react-native-localize": "^3.0.2",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^3.4.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-sms": "^1.11.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
