--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,9 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath 'com.google.gms:google-services:4.3.15'
+        // classpath 'com.android.tools.build:gradle:7.3.0'
+        // classpath 'com.android.tools.build:gradle:7.5.0'
+
     }
 }
 // plugins {
